--- a/appointment.html
+++ b/appointment.html
@@ -153,7 +153,7 @@
     </div>
     <section class="sub-banner" style="background: url(./img/sub-banner5.jpg) no-repeat; background-size: cover; background-position: center;">
         <div class="container-fluid">
-            <h3>Iletişim</h3>
+            <h3>Randevu Al</h3>
         </div>
     </section>
     <section class="maps-page">
@@ -217,7 +217,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-6">
-                    <h4>Iletişime Geçin</h4>
+                    <h4>Randevu Alın</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
                     </p>
