--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
                         </div>
                         <div>
-                            <a href="" class="btn">RANDEVU AL</a>
+                            <a href="appointment.html" class="btn">RANDEVU AL</a>
                         </div>
                     </div>
                 </div>
@@ -133,12 +133,13 @@
 
                     </div>
                     <div>
-                        <a href="" class="btn">RANDEVU AL</a>
+                        <a href="appointment.html" class="btn">RANDEVU AL</a>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+    
     <div id="search-box">
         <div class="container">
             <a class="close" href="#close"></a>
