--- a/our-teams.html
+++ b/our-teams.html
@@ -122,7 +122,7 @@
 
                         </div>
                         <div>
-                            <a href="" class="btn">RANDEVU AL</a>
+                            <a href="appointment.html" class="btn">RANDEVU AL</a>
                         </div>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
 
                     </div>
                     <div>
-                        <a href="" class="btn">RANDEVU AL</a>
+                        <a href="appointment.html" class="btn">RANDEVU AL</a>
                     </div>
                 </div>
             </div>
