--- a/service-detail.html
+++ b/service-detail.html
@@ -124,7 +124,7 @@
     
                         </div>
                         <div>
-                            <a href="" class="btn">RANDEVU AL</a>
+                            <a href="appointment.html" class="btn">RANDEVU AL</a>
                         </div>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
 
                     </div>
                     <div>
-                        <a href="" class="btn">RANDEVU AL</a>
+                        <a href="appointment.html" class="btn">RANDEVU AL</a>
                     </div>
                 </div>
             </div>
